--- a/style.css
+++ b/style.css
@@ -17,92 +17,98 @@ a {
   position: relative;
   z-index: 1;
 }
-.navbar {
-  height: 55px;
+.nav > .nav-title{
+  margin: 14px 16px;
+height: 37px;
+}
+
+.nav {
+  height: 50px;
   width: 100%;
-  background-color: cadetblue;
-  backdrop-filter: blur(10px);
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  position: fixed;
-  top: 0;
+  background-color: #4d4d4d;
+  position: relative;
 }
-.navbar i {
-  color: black;
-  height: 30px;
-  width: 45px;
-  background-color: transparent;
-  font-size: 1.4rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+
+.nav > .nav-header {
+  display: inline;
 }
-.navbar p {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+
+.nav > .nav-header > .nav-title {
+  display: inline-block;
+  font-size: 22px;
+  color: #fff;
+  padding: 10px 10px 10px 10px;
 }
-.border {
-  border: 1px transparent;
-  border: auto;
+
+.nav > .nav-btn {
+  display: none;
 }
-.border:hover {
-  border: 1px solid;
-  border-radius: 5px;
+
+.nav > .nav-links {
+  display: inline;
+  float: right;
+  font-size: 18px;
 }
-.border:active {
-  background-color: rgba(148, 149, 150, 0.566);
+
+.nav > .nav-links > a {
+  display: inline-block;
+  padding: 13px 10px 13px 10px;
+  text-decoration: none;
+  color: #efefef;
 }
-.nav-searchbar {
-  width: 600px;
-  height: 40px;
-  display: flex;
-  justify-content: space-evenly;
+
+.nav > .nav-links > a:hover {
+  background-color: rgba(0, 0, 0, 0.3);
 }
-.nav-option {
-  width: 80px;
-  text-align: center;
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-  border: none;
+
+.nav > #nav-check {
+  display: none;
 }
-.nav-input {
-  width: 100%;
-  font-size: 1rem;
-  font-weight: 0;
-  border: none;
-  outline: none;
-}
-.nav-searchbar i {
-  height: 40px;
-  width: 50px;
-  font-size: 1.5rem;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-.nav-searchbar button {
-  border: none;
-  outline: none;
-  background-color: black;
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-}
-.nav-searchbar button:active {
-  background-color: gray;
-}
-.bar-border {
-  border: 0.5px solid gray;
-  border-radius: 4px;
-}
-.bar-border:hover {
-  border: 2px solid rgb(54, 52, 52);
-  border-radius: auto;
+
+@media (max-width:600px) {
+  .nav > .nav-btn {
+    display: inline-block;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+  }
+  .nav > .nav-btn > label {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    padding: 13px;
+  }
+  .nav > .nav-btn > label:hover,.nav  #nav-check:checked ~ .nav-btn > label {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+  .nav > .nav-btn > label > span {
+    display: block;
+    width: 25px;
+    height: 10px;
+    border-top: 2px solid #eee;
+  }
+  .nav > .nav-links {
+    position: absolute;
+    display: block;
+    width: 100%;
+    background-color: #333;
+    height: 0px;
+    transition: all 0.3s ease-in;
+    overflow-y: hidden;
+    top: 50px;
+    left: 0px;
+  }
+  .nav > .nav-links > a {
+    display: block;
+    width: 100%;
+  }
+  .nav > #nav-check:not(:checked) ~ .nav-links {
+    height: 0px;
+  }
+  .nav > #nav-check:checked ~ .nav-links {
+    height: calc(100vh - 50px);
+    overflow-y: auto;
+  }
 }
 .hero-sec {
   height: 100%;
