--- a/login.css
+++ b/login.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 body {
-  background-color: rgb(48, 61, 144);
+  background-color:rgb(177, 176, 176) ;
 }
 .background {
   width: 430px;
@@ -41,7 +41,6 @@ form {
 }
 form * {
   font-family: "Poppins", sans-serif;
-  color:white;
   letter-spacing: 0.5px;
   outline: none;
   border: none;
@@ -51,7 +50,7 @@ form * {
   font-weight: 1000;
   line-height: 42px;
   text-align: center; 
-  color:white;
+
 }
 label {
   display: block;
@@ -63,22 +62,19 @@ input {
   display: block;
   height: 50px;
   width: 100%;
-  background-color: rgba(10, 1, 1, 0.597);
+  background-color: whitesmoke;
   border-radius: 3px;
   padding: 0 10px;
   margin-top: 8px;
   font-size: 14px;
   font-weight: 300;
 }
-::placeholder {
-  color:white;
-}
+
 button {
   margin-top: 50px;
   margin-left: 25%;
   width: 50%;
-  background-color: rgb(16, 14, 14);
-  color:white;
+  background-color: whitesmoke;
   padding: 15px 0;
   font-size: 18px;
   font-weight: 600;
@@ -99,15 +95,14 @@ button:hover {
   width: 150px;
   border-radius: 3px;
   padding: 5px 10px 10px 5px;
-  background-color: rgb(16, 14, 14);
-  color: white;
+  background-color: gray;
   display: flex;
   justify-content: center;
   text-align: center;
   
 }
 .social div:hover {
-  background-color: rgb(28, 21, 26);
+  background-color: whitesmoke;
 }
 .social .fb {
   margin-left: 25px;
