--- a/style.css
+++ b/style.css
@@ -17,16 +17,15 @@ a {
   position: relative;
   z-index: 1;
 }
-.nav > .nav-title{
-  margin: 14px 16px;
-height: 37px;
-}
 
 .nav {
   height: 50px;
   width: 100%;
-  background-color: #4d4d4d;
-  position: relative;
+  background-color:transparent;
+  backdrop-filter: blur(30px);
+  border-bottom: 1.5px solid gray;
+  position: fixed;
+  top: 0;
 }
 
 .nav > .nav-header {
@@ -117,7 +116,7 @@ height: 37px;
   background-size: cover;
 }
 .getstart {
-  height: 500px;
+  height: 550px;
   width: 100%;
 }
 .getstart h1 {
@@ -184,7 +183,7 @@ height: 37px;
 .gift_box {
   height: 180px;
   width: 150px;
-  margin: 0 10px 0 0;
+  margin: 15px;
   display: grid;
   justify-content: center;
 }
@@ -332,7 +331,7 @@ height: 37px;
   border-radius: 12px;
   font-size: 1.5rem;
   font-weight: 700;
-  margin-left: 240px;
+  margin-left: 13%;
   margin-top: 50px;
   display: flex;
   justify-content: center;
@@ -358,7 +357,7 @@ height: 37px;
   height: 100%;
   width: 75%;
   background-color: transparent;
-  font-size: 1.9rem;
+  font-size: 1.6rem;
   margin-left: 15%;
   padding: 10px 0 0 0;
   text-align: left;
@@ -387,7 +386,7 @@ height: 37px;
   font-size: 1rem;
   width: 100%;
   height: 80%;
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   padding: 10px;
   margin: 0;
 }
@@ -469,7 +468,7 @@ form {
   padding-bottom: 20px;
 }
 .footer-1 {
-  height: 240px;
+  height: 100%;
   width: 100%;
   background-color: transparent;
   backdrop-filter: blur(15px);
@@ -489,20 +488,19 @@ ul p {
   font-size: 1.3rem;
 }
 ul i {
-  font-size: 1.4rem;
+  font-size: 1.3rem;
 }
 .end-text {
-  padding-top: 5px;
   margin-top: 3px;
   background-color: transparent;
   backdrop-filter: blur(15px);
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 20px;
+  padding:25px 0 0 0;
 }
 .end-text a {
-  margin-right: 20px;
+  margin-right: 2%;
 }
 .copyright {
   background-color: transparent;
