--- a/style.css
+++ b/style.css
@@ -11,60 +11,50 @@ body {
 }
 a {
   color: black;
+  font-size: 1.4rem;
   font-weight: 700;
 }
 .parent {
   position: relative;
   z-index: 1;
 }
-
 .nav {
   height: 50px;
   width: 100%;
-  background-color:transparent;
-  backdrop-filter: blur(30px);
+  background-color:darkslategray;
+  backdrop-filter: blur(60px);
   border-bottom: 1.5px solid gray;
+  display: flex;
+  justify-content: right;
   position: fixed;
   top: 0;
 }
-
-.nav > .nav-header {
-  display: inline;
-}
-
-.nav > .nav-header > .nav-title {
-  display: inline-block;
-  font-size: 22px;
-  color: #fff;
-  padding: 10px 10px 10px 10px;
-}
-
 .nav > .nav-btn {
   display: none;
 }
-
 .nav > .nav-links {
   display: inline;
   float: right;
   font-size: 18px;
 }
-
 .nav > .nav-links > a {
   display: inline-block;
   padding: 13px 10px 13px 10px;
   text-decoration: none;
-  color: #efefef;
+  color: white;
 }
-
 .nav > .nav-links > a:hover {
   background-color: rgba(0, 0, 0, 0.3);
 }
-
 .nav > #nav-check {
   display: none;
 }
-
-@media (max-width:600px) {
+@media (max-width: 600px) {
+  .nav {
+    height: 50px;
+    width: 100%;
+    background-color:darkslategray;
+  }
   .nav > .nav-btn {
     display: inline-block;
     position: absolute;
@@ -77,8 +67,9 @@ a {
     height: 50px;
     padding: 13px;
   }
-  .nav > .nav-btn > label:hover,.nav  #nav-check:checked ~ .nav-btn > label {
-    background-color: rgba(0, 0, 0, 0.3);
+  .nav > .nav-btn > label:hover,
+  .nav #nav-check:checked ~ .nav-btn > label {
+    background-color: rgba(5, 5, 5, 0.3);
   }
   .nav > .nav-btn > label > span {
     display: block;
@@ -90,8 +81,8 @@ a {
     position: absolute;
     display: block;
     width: 100%;
-    background-color: #333;
-    height: 0px;
+    background-color:gray;
+    color: white;
     transition: all 0.3s ease-in;
     overflow-y: hidden;
     top: 50px;
@@ -317,9 +308,9 @@ a {
 }
 .history p {
   height: 100%;
-  width: 420px;
+  width: 60%;
   background-color: transparent;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   text-align: left;
   margin-left: 15%;
 }
@@ -357,7 +348,7 @@ a {
   height: 100%;
   width: 75%;
   background-color: transparent;
-  font-size: 1.6rem;
+  font-size: 1.3rem;
   margin-left: 15%;
   padding: 10px 0 0 0;
   text-align: left;
@@ -497,7 +488,7 @@ ul i {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding:25px 0 0 0;
+  padding: 25px 0 0 0;
 }
 .end-text a {
   margin-right: 2%;
